- added: `require('total.js').cluster.http(..., { thread: 'thread_name' })` evaluates only specified thread in cluster
- added: framework creates a file with app stats in the form `your_init_script_name.js.json`
- added: a new config key `allow_stats_snapshot`
- added: view engine `@{import()}` supports auto-merging JS or CSS files: `@{import('default.js + ui.js')}`

- updated: `WEBSOCKET()` supports `+`, `-` and `🔒` as authorization flags
- updated: `LOAD()` supports `service` type
- updated: cluster watches `restart` or `restart_NAME_of_THREAD` files for restarting of existing threads
- updated: cluster supports `auto` mode
- updated: cluster supports watcher in `debug` mode

- fixed: `ON('error404')` when the route doens't exist
- fixed: `filter` in Schema `workflows`, `transformations` and `operations`
- fixed: `NOSQL()` joins with absolute paths
- fixed: `TABLE()` joins with absolute paths
- fixed: `(random)` subtype in `config` files
- fixed: `(response)` phrase in `ROUTE()` for multiple `OPERATIONS`
- fixed: a response in `ROUTE()` with mulitple operations if the result contained some error
- fixed: a security bug with a path traversal vulnerability

- improved: `LOGMAIL()` mail format
- improved: starting logs in console output (added IPv4 local address)

======= 3.3.2

- fixed: default time zone (`utc` is default time zone)

======= 3.3.1

- added: `RESTBuilder.callback()` which performs `.exec()` automatically
- added: `FLOWSTREAM()`

- fixed: `AUDIT()` method
- fixed: error handling in `controller.invalid()`
- fixed: `req.authorize()`
- fixed: CSS auto-vendor-prefixes, fixed `opacity` with `!important`
- fixed: `CONVERT()` a problem with arrays

======= 3.3.0

- added: `NEWTASK(name, declaration)` for creating preddefined `TaskBuilder`
- added: `TASK(name, taskname, callback, [controller/SchemaOptions/OperationOptions/ErrorBuilder])` for executing preddefined `TaskBuilder`
- added: a new config key `directory_tasks` for `TaskBuilder`